error's fixed and discovered how to link external css file and stretch pic to complete background

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
-body {
-    background-color: red;
-  }
+body{
+    background-image: url("https://images.unsplash.com/photo-1564198659768-f5b37e6419ee?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+div{
+    color: white;
+
+}
